# azerothcore-wotlk

./: .ai_assistance_needed  .gitignore  ADDON_COMMUNICATION_IMPLEMENTATION.md  AI_FIX_REQUEST_20251201_020037.txt  AI_FIX_REQUEST_20251201_020338.txt  AI_FIX_REQUEST_20251201_020918.txt  AI_PROMPT_20251201_020037.txt  AI_PROMPT_20251201_020338.txt  AI_PROMPT_20251201_020918.txt  AI_REQUEST_20251201_020037.json  AI_REQUEST_20251201_020338.json  AI_REQUEST_20251201_020918.json  AUTO_PROMPT.txt  BUILD_ALL.md  CLONE_INSTRUCTIONS.md  CMakeLists.txt  CMakeSettings.json  COMPREHENSIVE_ROADMAP.md  IMPLEMENTATION_CHECKLIST.md  QUICK_START.md  QUICK_START_FIXED.md  SCHEDULE_SETUP.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  TODO_ANALYSIS_MEDIUM_PRIORITY.md  TODO_TRACKER.csv  TODO_TRACKER_PLAYERBOTS.csv  WHATS_NEXT_ANALYSIS.md  WOW_335A_BACKPORTS.md  auto_check_errors.ps1  auto_fix_generator.ps1  build_all.ps1  check_and_fix_npcs.sql  check_npcs.ps1  check_npcs.sql  deploy.ps1  erveryWOTLK-BOTSazerothcore-wotlk  fix_auto_increment.ps1  fix_auto_increment.sql  fix_npcs.ps1  fix_npcs.sql  (+21 more)
.github/: README.md
docs/: PLAYER_SYSTEM_ANALYSIS.md  SERVER_ARCHITECTURE_ANALYSIS.md  SPELL_SYSTEM_ANALYSIS.md
modules/: CMakeCache.txt  CMakeLists.txt
modules/mod-progressive-systems/: ADDON_INSTANCE_RESET_INTEGRATION.md  AUTO_SETUP.md  AUTO_SETUP_COMPLETE.md  CHANGELOG.md  CMakeLists.txt  COMPLETED.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_STATUS.md  COMPLETION_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  INSTANCE_RESET_GUIDE.md  ISSUES_FIXED.md  ITEM_HOT_RELOAD_GUIDE.md  ITEM_ICON_GUIDE.md  MODERNIZATION_PLAN.md  MY_OPINION_AND_ROADMAP.md  NEW_SYSTEMS.md  NEXT_STEPS.md  PROGRESSIVE_SERVER_CONFIG.conf  README.md  REVIEW_SUMMARY.md  SERVER_OVERVIEW.md  SQL_INSTALLATION_ORDER.md  SUMMARY_NEW_SYSTEMS.md  TODO.md  include.sh  mod-progressive-systems.conf.dist
modules/mod-progressive-systems/addon/: INSTALLATION.md  README.md
modules/mod-progressive-systems/addon/ParagonSystem/: ParagonSystem.lua  ParagonSystem.toc  ParagonSystemData.lua  ParagonSystemUI.lua
modules/mod-progressive-systems/addon/ProgressiveSystems/: ADDON_FEATURES.md  InstanceResetUI.lua  ProgressiveSystems.lua  ProgressiveSystems.toc  ProgressiveSystemsAutoPatch.lua  ProgressiveSystemsData.lua  ProgressiveSystemsItemIcons.lua  ProgressiveSystemsParagon.lua  ProgressiveSystemsStats.lua  ProgressiveSystemsUI.lua  README.md
modules/mod-progressive-systems/conf/: mod-progressive-systems.conf.dist
modules/mod-progressive-systems/data/sql/characters/base/: 00_AUTO_SETUP_ALL.sql  ALL_PROGRESSIVE_SYSTEMS.sql  achievement_integration.sql  add_reward_points_column.sql  character_progression_unified.sql  custom_stats.sql  daily_challenges.sql  daily_system.sql  gameplay_enhancements.sql  guild_progression.sql  instance_difficulty_tracking.sql  instance_reset_tracking.sql  palace_stats.sql  paragon_system.sql  progressive_systems.sql  pvp_progression.sql
modules/mod-progressive-systems/data/sql/world/base/: 00_AUTO_SETUP_ALL.sql  auto_item_generator.sql  bloody_palace_bosses.sql  bloody_palace_waves.sql  create_custom_currency_items.sql  create_custom_weapon_template.sql  difficulty_scaling.sql  enhanced_gems.sql  enhanced_glyphs.sql  unified_stat_system.sql
modules/mod-progressive-systems/docs/: AUTO_DBC_PATCH_SYSTEM.md  CLIENT_AUTO_PATCH_GUIDE.md  CUSTOM_ITEMS_GUIDE.md  CUSTOM_WEAPONS_GUIDE.md  SERVER_VS_CLIENT_ARCHITECTURE.md
modules/mod-progressive-systems/lua_scripts/: 00_init.lua  config.lua  daily_challenge_generator.lua  daily_challenges_npc.lua  infinite_dungeon_npc.lua  infinite_dungeon_waves.lua  instance_reset_npc.lua  item_upgrade_npc.lua  main_menu_npc.lua  paragon_npc.lua  progressive_items_npc.lua  progressive_systems_core.lua  reward_shop_npc.lua
modules/mod-progressive-systems/src/: AutoItemGenerator.cpp  AutoItemGenerator.h  DBCGenerator.cpp  DBCGenerator.h  DailyChallengeSystem.h  DifficultyScaling.cpp  DifficultyScaling.h  EnhancedGemSystem.cpp  EnhancedGemSystem.h  EnhancedGlyphSystem.cpp  EnhancedGlyphSystem.h  GameplayEnhancements.cpp  GameplayEnhancements.h  InfiniteDungeonInstanceManager.cpp  InfiniteDungeonInstanceManager.h  InfiniteDungeonSystem.h  InfiniteDungeonWaveSpawner.cpp  InfiniteDungeonWaveSpawner.h  InstanceResetSystem.cpp  InstanceResetSystem.h  ItemTemplateHotReload.cpp  ItemTemplateHotReload.h  ParagonSystem.h  PatchServer.cpp  PatchServer.h  PersonalLootSystem.cpp  PersonalLootSystem.h  ProgressiveSystems.cpp  ProgressiveSystems.h  ProgressiveSystemsAddon.cpp  ProgressiveSystemsAddon.h  ProgressiveSystemsAddonScript.cpp  ProgressiveSystemsAddonScript.h  ProgressiveSystemsCache.cpp  ProgressiveSystemsCache.h  ProgressiveSystemsCommands.cpp  ProgressiveSystemsCommands.h  ProgressiveSystemsDatabase.cpp  ProgressiveSystemsDatabase.h  ProgressiveSystemsLoader.cpp  (+4 more)
session-logs/: ALL_FILES_PUSHED_VERIFIED.md  AUTOMATION_SETUP_COMPLETE.md  AZTH_ACHIEVEMENTS_FIX.md  BUG_FIXES_APPLIED.md  BUG_HUNTING_SESSION_SUMMARY.md  BUG_HUNT_REPORT.md  BUILD_ARTIFACTS_CLEANUP.md  BUILD_CONFIGURATION_COMPLETE.md  BUILD_DIRECTORY_CLEANED.md  BUILD_SUCCESS.md  CLEANUP_AND_REFACTOR_SUMMARY.md  CLONE_INSTRUCTIONS.md  COMPILATION_FIXES_APPLIED.md  COMPILATION_READY.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_SETUP_SUMMARY.md  COMPLETION_STATUS.md  COMPREHENSIVE_BUG_REPORT.md  COMPREHENSIVE_IMPROVEMENT_ROADMAP.md  COMPREHENSIVE_ISSUES_FIXED.md  DATABASE_AND_SCRIPT_FIXES_SUMMARY.md  DATABASE_DIAGNOSTICS_GUIDE.md  DATABASE_FIXES_APPLIED.md  DATABASE_FIXES_NEEDED.md  DOCS_DIRECTORY_ANALYSIS.md  DOCS_MOVED_TO_SESSION_LOGS.md  EVERYTHING_ELSE_CHECKED.md  FINAL_BUG_DIAGNOSTIC_SUMMARY.md  FINAL_COMPLETE_CHECKLIST.md  FINAL_GITHUB_BUILD_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  (+63 more)
tools/launcher/: BUILD_AND_TEST.md  CMakeLists.txt  README.md  WEBSERVER_SETUP.md  fix_vcpkg_wildcards.ps1.in  install_qt.ps1
tools/launcher/src/: DownloadManager.cpp  DownloadManager.h  LauncherCore.cpp  LauncherCore.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
(+229 files in other folders)
